--- a/about-us.html
+++ b/about-us.html
@@ -141,7 +141,7 @@
                                 </div>
                                 <div class="header-action">
                                     <ul class="list-wrap">
-                                        <li class="header-btn"><a href="contact.html" class="btn">get a quote</a></li>
+                                        <li class="header-btn"><a href="contact.html" class="btn">Let's Enquiry</a></li>
                                     </ul>
                                 </div>
                             </nav>
