--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="header-action">
                                     <ul class="list-wrap">
-                                        <li class="header-btn"><a href="contact.html" class="btn">get a quote</a></li>
+                                        <li class="header-btn"><a href="contact.html" class="btn">Let's Enquiry</a></li>
                                     </ul>
                                 </div>
                             </nav>
@@ -233,8 +233,8 @@
                                     <div class="slider-btn">
                                         <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                             data-delay=".9s">Start a Your Journey</a>
-                                        <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
-                                            data-delay=".9s"><span>Lets Enquiry</span></a>
+                                        <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
+                                            data-delay=".9s"><span>Lets Enquiry</span></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -253,8 +253,8 @@
                                     <div class="slider-btn">
                                         <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                             data-delay=".9s">Start a Your Journey</a>
-                                        <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
-                                            data-delay=".9s"><span>Lets Enquiry</span></a>
+                                        <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
+                                            data-delay=".9s"><span>Lets Enquiry</span></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -273,8 +273,8 @@
                                     <div class="slider-btn">
                                         <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                             data-delay=".9s">Start a Your Journey</a>
-                                        <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
-                                            data-delay=".9s"><span>Lets Enquiry</span></a>
+                                        <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
+                                            data-delay=".9s"><span>Lets Enquiry</span></a> -->
                                     </div>
                                 </div>
                             </div>
@@ -285,14 +285,14 @@
                      <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-xl-8 col-lg-9">
-                                    <div class="slider-content">
-                                        <span class="sub-title" data-animation="fadeInUp" data-delay=".3s">IT Consulting & IT Service</span>
-                                        <h2 class="title" data-animation="fadeInUp" data-delay=".6s">Your Trusted Partner For All Your Business Needs And Solutions</h2>
-                                        <div class="slider-btn">
+                                    <div class="slider-content text-start">
+                                        <h2 class="title" data-animation="fadeInUp" data-delay=".6s">Providing digital expertise to organization spanning various industries</h2>
+                                        <p class="text-white" data-animation="fadeInUp" data-delay=".3s">Your Strategic Partner In Navigating the Digital Journey.</p>
+                                        <div class="slider-btn justify-content-start">
                                             <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                                 data-delay=".9s">Start a Your Journey</a>
-                                            <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
-                                                data-delay=".9s"><span>Lets Enquiry</span></a>
+                                            <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
+                                                data-delay=".9s"><span>Lets Enquiry</span></a> -->
                                         </div>
                                     </div>
                                 </div>
@@ -394,10 +394,10 @@
                                 </svg>
                             </div>
                             <div class="choose-content">
-                                <h2 class="title"><a href="why-choose-us.html">Experience</a></h2>
+                                <h2 class="title"><a href="javascript:void(0);">Experience</a></h2>
                                 <p>Our 13-year journey speaks volumes about our experience. We have seen technology
                                     evolve and adapt, and we've done the same to stay ahead.</p>
-                                <a href="why-choose-us.html" class="read-more">Read More</a>
+                                <!-- <a href="javascript:void(0);" class="read-more">Read More</a> -->
                             </div>
                         </div>
                     </div>
@@ -414,10 +414,10 @@
                                 </svg>
                             </div>
                             <div class="choose-content">
-                                <h2 class="title"><a href="why-choose-us.html">Diverse Team</a></h2>
+                                <h2 class="title"><a href="javascript:void(0);">Diverse Team</a></h2>
                                 <p>Our success is also attributed to our remarkable team. We are proud to have some of
                                     the brightest minds in the field, individuals dedicated to pushing boundaries.</p>
-                                <a href="why-choose-us.html" class="read-more">Read More</a>
+                                <!-- <a href="javascript:void(0);" class="read-more">Read More</a> -->
                             </div>
                         </div>
                     </div>
@@ -435,11 +435,11 @@
 
                             </div>
                             <div class="choose-content">
-                                <h2 class="title"><a href="why-choose-us.html">Client-Centric Approach</a></h2>
+                                <h2 class="title"><a href="javascript:void(0);">Client-Centric Approach</a></h2>
                                 <p>At the heart of our success is our unwavering commitment to our clients. We are
                                     passionate about understanding their unique needs and providing tailored solutions
                                     that drive their success.</p>
-                                <a href="why-choose-us.html" class="read-more">Read More</a>
+                                <!-- <a href="javascript:void(0);" class="read-more">Read More</a> -->
                             </div>
                         </div>
                     </div>
@@ -454,10 +454,10 @@
                                 </svg>
                             </div>
                             <div class="choose-content">
-                                <h2 class="title"><a href="why-choose-us.html">Innovation</a></h2>
+                                <h2 class="title"><a href="javascript:void(0);">Innovation</a></h2>
                                 <p>We thrive on innovation, constantly exploring new solutions, and ensuring that our
                                     clients remain at the forefront of their industries.</p>
-                                <a href="why-choose-us.html" class="read-more">Read More</a>
+                                <!-- <a href="javascript:void(0);" class="read-more">Read More</a> -->
                             </div>
                         </div>
                     </div>
