--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
                 <div class="single-slider slider-bg" data-background="assets/img/banner/banner-img/home-banner1.jpg">
                     <div class="container">
                         <div class="row justify-content-start">
+                            <div class="col-xl-1 col-lg-1 col-md-1"></div>
                             <div class="col-xl-8 col-lg-9">
-                                <div class="slider-content">
+                                <div class="slider-content text-start">
 
                                     <h2 class="title pb-0 mb-0" data-animation="fadeInUp" data-delay=".6s">Dynamic 365
                                         Business Central</h2>
@@ -230,7 +231,7 @@
                                         consulting services</h4>
                                     <p class="text-white" data-animation="fadeInUp" data-delay=".3s"> A unified,
                                         scalable solution for streamlined operations and adaptive growth</p>
-                                    <div class="slider-btn">
+                                    <div class="slider-btn justify-content-start">
                                         <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                             data-delay=".9s">Start a Your Journey</a>
                                         <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
@@ -244,13 +245,14 @@
                 <div class="single-slider slider-bg" data-background="assets/img/banner/banner-img/home-banner2.jpg">
                     <div class="container">
                         <div class="row justify-content-start">
+                            <div class="col-xl-1 col-lg-1 col-md-1"></div>
                             <div class="col-xl-8 col-lg-9">
-                                <div class="slider-content">
+                                <div class="slider-content text-start">
                                     <h2 class="title mb-0" data-animation="fadeInUp" data-delay=".6s">Microsoft</h2>
                                     <h2 class="title mb-0" data-animation="fadeInUp" data-delay=".6s">Power Platforms
                                     </h2>
                                     <!-- <span class="sub-title" data-animation="fadeInUp" data-delay=".3s">IT Consulting & IT Service</span> -->
-                                    <div class="slider-btn">
+                                    <div class="slider-btn justify-content-start">
                                         <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                             data-delay=".9s">Start a Your Journey</a>
                                         <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
@@ -264,13 +266,14 @@
                 <div class="single-slider slider-bg" data-background="assets/img/banner/banner-img/home-banner3.jpg">
                     <div class="container">
                         <div class="row justify-content-start">
+                            <div class="col-xl-1 col-lg-1 col-md-1"></div>
                             <div class="col-xl-8 col-lg-9">
-                                <div class="slider-content">
+                                <div class="slider-content text-start">
                                     <!-- <span class="sub-title" data-animation="fadeInUp" data-delay=".3s">IT Consulting &
                                         IT Service</span> -->
                                     <h2 class="title mb-0" data-animation="fadeInUp" data-delay=".6s">Microsoft Azure</h2>
                                     <h5 class="text-white">The cloud for modern business</h5>
-                                    <div class="slider-btn">
+                                    <div class="slider-btn justify-content-start">
                                         <a href="contact.html" class="btn" data-animation="fadeInLeft"
                                             data-delay=".9s">Start a Your Journey</a>
                                         <!-- <a href="contact.html" class="btn btn-two" data-animation="fadeInRight"
@@ -284,6 +287,7 @@
                 <div class="single-slider slider-bg" data-background="assets/img/banner/banner-img/home-home4.jpg">
                      <div class="container">
                             <div class="row justify-content-start">
+                                <div class="col-xl-1 col-lg-1 col-md-1"></div>
                                 <div class="col-xl-8 col-lg-9">
                                     <div class="slider-content text-start">
                                         <h2 class="title" data-animation="fadeInUp" data-delay=".6s">Providing digital expertise to organization spanning various industries</h2>
