--- a/services.html
+++ b/services.html
@@ -151,7 +151,7 @@
                                                 <!-- <li><a href="#">Others</a></li> -->
                                             </ul>
                                         </li>
-                                        <li><a href="academic-traning.html">Academic/Traninig</a></li>
+                                        <li><a href="academic-traning.html">Academic/Training</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
