--- a/academic-traning.html
+++ b/academic-traning.html
@@ -138,7 +138,7 @@
                                                 <!-- <li><a href="#">Others</a></li> -->
                                             </ul>
                                         </li>
-                                        <li class="active "><a href="academic-traning.html">Academic/Traninig</a></li>
+                                        <li class="active "><a href="academic-traning.html">Academic/Training</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
